# Firmware.F334_Buck_Converter

./: CMakeLists.txt  program.sh
CubeMX/F334_PS/: .mxproject  F334_PS.ioc  Makefile  STM32F334K8Tx_FLASH.ld  startup_stm32f334x8.s
CubeMX/F334_PS/Inc/: hrtim.h  main.h  opamp.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
CubeMX/F334_PS/Src/: adc.c  dac.c  dma.c  gpio.c  hrtim.c  i2c.c  main.c  opamp.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usart.c
Inc/: clock.hpp  lcd.hpp  main_cycle.hpp  pid_regulator.hpp  pwm.hpp  type3_regulator.hpp  utils.hpp
Src/: clock.cpp  fault.cpp  lcd.cpp  main.cpp  main_cycle.cpp  syscalls.c  utils.cpp
